The values in the multi-value bin does not need to be of the same numerical type